# kompas-sdl

./: CMakeLists.txt  Doxyfile  Doxyfile.version.cmake  README.md  Toolchain-GP2X.cmake  Toolchain-mingw32.cmake
doc/: namespaces.dox
kompas/: main.conf
kompas/keyboard/: cz.conf
kompas/lang/: en.conf
map2x/: skin.conf  skin2.conf
map2x/keyboard/: cz.conf
map2x/lang/: cz.conf  en.conf
src/: CMakeLists.txt  ConfParser.cpp  ConfParser.h  Effects.cpp  Effects.h  FPS.cpp  FPS.h  Keyboard.cpp  Keyboard.h  Localize.cpp  Localize.h  Map.cpp  Map.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  Mouse.cpp  Mouse.h  Skin.cpp  Skin.h  Splash.cpp  Splash.h  Toolbar.cpp  Toolbar.h  configure.h.cmake  main.cpp  utility.cpp  utility.h
